# game-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  license  readme.md
assets/: graphic.ase  graphic.aseprite  user-interface.ase
docs/: 00-overview.md  00-readme.md  01-install.md
docs/dev/: 00-overview-engine.md  02-entity-manager.md  04-ui-manager.md  cooking.md  engine.md  entities.md  entity-manager.md  event-manager.md  items.md  level-manager.md  logger.md  orders.md  rating.md  scene-manager.md  ui-manager.md
src/: .editorconfig  main.cpp
src/core/: game.cpp  game.hpp  globals.hpp  states.hpp  utils.hpp
src/core/animations/: animations.cpp  animations.hpp
src/core/audio/: audio.hpp
src/core/debug/: logger.hpp
src/core/resources/: resources.hpp
src/core/tilemap/: tilemap.cpp  tilemap.hpp
src/economy/: economy.hpp
src/engine/: CMakeLists.txt  engine.hpp  logger.h
src/engine/animations/: animations.cpp  animations.hpp
src/engine/audio/: audio.cpp  audio.hpp
src/engine/collisions/: collisions.cpp  collisions.hpp
src/engine/entity/: entity-manager.hpp  entity.hpp
src/engine/entity/entities/: entity.hpp
src/engine/events/: event-manager.hpp
src/engine/levels/: level-manager.hpp
src/engine/levels/levels/: level.hpp
src/engine/scenes/: scene-manager.hpp  scene.hpp
src/engine/tests/: entity-manager.cpp  event-manager.cpp  level-manager.cpp  scene-manager.cpp  ui-manager.cpp
src/engine/ui/: element.hpp  gui.hpp  ui-manager.cpp  ui-manager.hpp
src/engine/ui/elements/: button.hpp  container.hpp  element.hpp  label.hpp  rect.hpp
src/entities/: entity-manager.hpp  entity.hpp
src/entities/entities/: build.cpp  build.hpp  npc.cpp  npc.hpp  player.cpp  player.hpp
src/events/: event-manager.hpp  event.hpp
src/game/: game.cpp  game.hpp
src/game/maps/: level1.cpp  level1.hpp
src/mechanics/: cooking-manager.hpp  cooking.hpp  economy-manager.hpp  event-manager.hpp  fridge-manager.hpp  glocery-shop-manager.hpp  inventory-manager.hpp  inventory.hpp  items.hpp  orders-manager.hpp  rating-manager.hpp  warehouse-manager.hpp
src/ui/: gui.hpp  ui-manager.hpp
src/ui/core/: gui.hpp  ui.hpp
src/ui/core/elements/: button.cpp  button.hpp  label.hpp  panel.hpp  ui-element.hpp
src/ui/elements/: button.cpp  button.hpp  color-rect.hpp  label.hpp  panel.hpp  progress-bar.cpp  progress-bar.hpp  sprite.hpp  ui-element.cpp  ui-element.hpp
src/ui/screens/: IHUD.h  bake.cpp  bake.hpp  fridge.cpp  fridge.hpp  glocery-shop.cpp  glocery-shop.hpp  hud.cpp  hud.hpp  inventory.cpp  inventory.hpp  kitchen.cpp  kitchen.hpp  orders.cpp  orders.hpp  pause.cpp  pause.hpp  screen.hpp  ui.hpp  warehouse.cpp  warehouse.hpp
src/world/: builds.hpp  characters.hpp  nature.hpp  world.hpp
tests/: economy.cpp  entity-manager.cpp  glocery-store.cpp  inventory.cpp  level-manager.cpp  resources.cpp  test.cpp  ui-manager.cpp  warehouse.cpp
tests/core/: resources.cpp
